# Superton

./: .gitignore  CONTRIBUTING.md  LICENSE  Modelfile  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
superton/: Modelfile  __init__.py  blackhole.py  cli.py  config.py  doctor.py  ingest.py  memory.py  model.py  shell.py  ui.py
superton/assets/: mascot.txt
superton/importers/: __init__.py  chatgpt.py  claude_code.py  generic_threads.py
superton/puller/: __init__.py  detect.py  discovery.py  extractor.py  main.py  pool.py  renderer.py  routes.py  ua.py  worker.py
tests/: test_e2e_model.py  test_puller.py  test_smoke.py
