[project]
name = "superton"
version = "0.1.0"
description = "A tiny local LLM with infinite memory. Your second brain that never forgets."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Rahul" }]
requires-python = ">=3.10"
keywords = ["llm", "local", "memory", "rag", "ollama", "knowledge-base", "second-brain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "platformdirs>=4.2.0",
    "mempalace>=3.3.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.0",
    "markdown-it-py>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
tui = ["textual>=0.60.0"]

[project.scripts]
superton = "superton.cli:app"

[project.urls]
Homepage = "https://github.com/rahul/superton"
Repository = "https://github.com/rahul/superton"
Issues = "https://github.com/rahul/superton/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["superton"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
