[project]
name = "superton"
version = "0.1.0"
description = "A tiny local LLM with infinite memory. Your second brain that never forgets."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Rahul" }]
requires-python = ">=3.11"
keywords = ["llm", "local", "memory", "rag", "ollama", "knowledge-base", "second-brain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "platformdirs>=4.2.0",
    "mempalace>=3.3.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.0",
    "markdown-it-py>=3.0.0",
    "prompt-toolkit>=3.0.0",
    "trafilatura>=1.12.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
web = [
    "playwright>=1.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
superton = "superton.cli:app"

[project.urls]
Homepage = "https://github.com/therahul-yo/Superton"
Repository = "https://github.com/therahul-yo/Superton"
Issues = "https://github.com/therahul-yo/Superton/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["superton"]

[tool.hatch.build.targets.wheel.force-include]
"superton/Modelfile" = "superton/Modelfile"

[tool.hatch.build.targets.sdist]
include = [
    "/superton",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/Modelfile",
    "/pyproject.toml",
    "/uv.lock",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
